0029351: Boolean Operations create invalid pcurves

When making pcurve for edge on face make sure that the produced 2D curve will have the same range as 3D curve of the edge.